--- a/client/index.html
+++ b/client/index.html
@@ -3,40 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>chatterbox</title>
-    <!-- <script src="bower_components/bootstrap/dist/bootstrap.css"></script> -->
-    <link rel="stylesheet" href="styles/styles.css">
+<!--     <script src="bower_components/bootstrap/dist/bootstrap.css"></script>
+ -->    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- dependencies -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
-
-    <script>
-      // YOU DO NOT NEED TO EDIT THIS CODE
-      if (!/(&|\?)username=/.test(window.location.search)) {
-        var newSearch = window.location.search;
-        if (newSearch !== '' & newSearch !== '?') {
-          newSearch += '&';
-        }
-        newSearch += 'username=' + (prompt('What is your name?') || 'anonymous');
-        window.location.search = newSearch;
-      }
-    </script>
     <!-- your scripts -->
+
     <script src="env/config.js"></script>
-    <script src="scripts/app.js"></script>
+   <script>
+      // YOU DO NOT NEED TO EDIT THIS CODE
+    var userName = window.prompt('What is your name?'); 
+    if (!/(&|\?)username=/.test(window.location.search)) {
+    var newSearch = window.location.search;
+      if (newSearch !== '' & newSearch !== '?') {
+        newSearch += '&';
+      }
+    newSearch += 'username=' + (userName || 'anonymous');
+    window.location.search = newSearch;
+    }
+    </script>
   </head>
   <body>
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
-      <form>
-        <div>
-          <label for="messageInput">Message:</label>
-          <input type="text" id="messageInput" name="message" value="message?" onsubmit="newMessage()">
-          <input type ='submit'/>
+        <div class = "messageBox" >
+          <div class ="messageLabel">Message:</div>
+          <input type="text" id="messageInput" name="message" placeholder="message?"></input>
+          <button id ="messageSubmit"></button>
         </div>
-      </form>
+
+      <div class = 'rooms'>
+        <div class = "room lounge" onclick="getTheLounge()">Lounge</div>
+        <div class = "room coding" onclick="getCoding()">Coding</div>
+        <div class = "room philosophy" onclick="getPhilosophy()">Philosophy</div>
+        <div class = "room politics" onclick="getPolitics()">Politics</div>
+      </div>
     </div>
     <div id="chats"></div>
   </body>
+    <script src="scripts/app.js"></script>
 </html>
+
+
+
+
