Finished bare minimums

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -6,6 +6,7 @@
   <script src="lib/jquery.js"></script>
   <script src="lib/mocha/mocha.js"></script>
   <script src="lib/chai/chai.js"></script>
+  <script src="client/bower_components/underscore/underscore.js"></script>
   <script src="lib/sinon/sinon.js"></script>
   <script>
     mocha.setup('bdd');
@@ -16,10 +17,10 @@
   </script>
 
   <!-- Spec files -->
+  <script src="client/scripts/app.js"></script>
   <script src="spec/chatterboxSpec.js"></script>
 
   <!-- Source files -->
-  <script src="client/scripts/app.js"></script>
 
 </head>
 <body>
